数据可视化饼图、柱状图、折线图的初始化

--- a/mart-manage-vue3/src/assets/css/common.less
+++ b/mart-manage-vue3/src/assets/css/common.less
@@ -745,3 +745,10 @@ a.text-gray {
 .swiper-pagination-bullet-active {
   background-color: #666;
 }
+
+.page-wraper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
